--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,84 @@
 .App {
-  text-align: center;
+    text-align: center;
+    justify-content: center;
+    align-items: center;
+    min-height: 100vh;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+.calendar {
+    width: 75%;
+    margin: 0 auto;
+    margin-top: 50px;
 }
 
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
+.calendar-header {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    padding: 10px;
+    background-color: #f0f0f0;
+    border-bottom: 1px solid #ccc;
 }
 
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+.calendar-header select {
+    font-size: 16px;
+    padding: 5px 10px;
+    border: 1px solid #ccc;
+    border-radius: 5px;
+    background-color: #fff;
+    color: #333;
+    cursor: pointer;
+    outline: none;
+    transition: background-color 0.3s ease;
 }
 
-.App-link {
-  color: #61dafb;
+.calendar-grid {
+    display: grid;
+    grid-template-columns: repeat(7, 1fr);
+    gap: 1px;
+    padding: 10px;
+    background-color: #e0e0e0;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.calendar-day,
+.calendar-cell {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    padding: 15px;
+    background-color: #fff;
+    cursor: pointer;
+}
+
+.calendar-day {
+    font-size: larger;
+    font-weight: bold;
+    background-color: #e1e0e0;
+}
+
+.calendar-cell.active {
+    background-color: #fafafa;
+}
+
+.calendar-cell:hover {
+    background-color: #ddd;
+}
+
+button {
+    background-color: #e1e0e0;
+    padding: 10px;
+    border: 1px solid #adacac;
+    border-radius: 5px;
+    cursor: pointer;
+}
+
+button:hover {
+    background-color: #b2b2b2;
+}
+
+.calendar-cell.today {
+    background-color: #9a9898;
+    color: #ffffff;
+    font-weight: bold;
+    border: 2px solid #adacac;
 }
